--- a/sectionpage.html
+++ b/sectionpage.html
@@ -86,7 +86,7 @@
 
     <!--VERTICAL SECTION-->
 
-    <section class="section gray">
+    <section class="section member-exclusive">
         <div class="container">
             <div class="columns">
                 <div class="column is-5 is-offset-4">
